name:           Lhs2TeXWrapper
version:        0.1.0.0
synopsis:       Wrapper for lhs2TeX, used by Eclipse.
license:        PublicDomain
author:         deathInTheAfternoon
maintainer:     deathInTheAfternoon@gmail.com
category:       Tutorial
cabal-version:  >=1.2
build-type:     Simple

executable Lhs2TeXWrapper
  hs-source-dirs:  src
  main-is:         Main.lhs
  build-depends:   base >= 4, process, cmdargs >= 0.10.12, split, filepath
  ghc-options:     -Wall -rtsopts

