name:           lenses
version:        0.1.0.0
synopsis:       Simple tutorial on lenses
license:        PublicDomain
author:         deathInTheAfternoon
maintainer:     deathInTheAfternoon@gmail.com
category:       Tutorial
build-type:     Simple
cabal-version:  >=1.10

library
  build-depends:     base >=4.7 && <4.8
  hs-source-dirs:    src
  default-language:  Haskell2010
  other-modules:     

